# smart-player

./: README.md  main.py  pyproject.toml
core/: export_service.py  export_worker.py  yolo_service.py  yolo_worker.py
src/: main.py  window.py  yolo_service.py
ui/: image_view.py  main_window.py
